# PythonCode

./: Az9P.md  README.md  pyproject.toml  test.json  test.md  test.py  test2.md
LangChain/: chains.py  chat_model.py  chat_tongyi.py  prompt_templates.py  split_test.py  test.py
child_parent_split/: main.py  test.py  test2.py  test3.py  test4.py
config/: llm_config.py
coroutine/: test.py
html/: algo.codefather.cn_算法导航_-_交互式算法学习与可视化平台.html  bilibili.com_尚硅谷NLP教程nlp自然语言处理TransformerLSTMBERT等大模型技术全覆盖_哔哩哔哩_bilibili.html  blog.csdn.net_一周年纪念日-一个疯癫的野心家-CSDN博客.html  duitang.com_高清图片堆糖美图壁纸兴趣社区.html  mp.weixin.qq.com_page.html  no9ai.com_成都九号诶艾科技.html  runoob.com_Java_教程__菜鸟教程.html  runoob.com_Java_重写Override与重载Overload__菜鸟教程.html  tripknow9.atlassian.net_Jira.html  xiaohongshu.com_中秋快乐_-_小红书.html  国庆第一天，我被迫加班。。。麻了.html
html_to_md/: html_to_md_converter.py
markdown/: runoob.com_Java_重写Override与重载Overload__菜鸟教程.md
md_tool_test/: convert_to_md.py
scrapy/: README.md  scraper.py  settings.py  simple_scraper.py  spider.py
temp/: algo.codefather.cn_算法导航_-_交互式算法学习与可视化平台.md  bilibili.com_尚硅谷NLP教程nlp自然语言处理TransformerLSTMBERT等大模型技术全覆盖_哔哩哔哩_bilibili.md  blog.csdn.net_一周年纪念日-一个疯癫的野心家-CSDN博客.md  duitang.com_高清图片堆糖美图壁纸兴趣社区.md  mp.weixin.qq.com_page.md  no9ai.com_成都九号诶艾科技.md  runoob.com_Java_教程__菜鸟教程.md  runoob.com_Java_重写Override与重载Overload__菜鸟教程.md  xiaohongshu.com_中秋快乐_-_小红书.md
web_scrapy/: README.md  README_FEATURES.md  pipelines.py  scraper_test.py  settings.py  simple_scraper.py  spider.py
