[project]
name = "pythoncode"
version = "0.1.0"
description = ""
authors = [
    { name = "lichengxiang", email = "1239669254@qq.com" }
]
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "ruff (>=0.13.3,<0.14.0)",
    "mypy (>=1.18.2,<2.0.0)",
    "markdownify (>=1.2.0,<2.0.0)",
    "scrapy (>=2.13.3,<3.0.0)",
    "zstandard (>=0.25.0,<0.26.0)",
    "brotli (>=1.1.0,<2.0.0)",
    "beautifulsoup4 (>=4.12.0,<5.0.0)",
    "markitdown[all] (>=0.1.3,<0.2.0)",
    "langchain-community (>=0.4.1,<0.5.0)",
    "langchain-core (>=1.0.5,<2.0.0)",
    "dashscope (>=1.25.1,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[[tool.poetry.source]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"
priority = "primary"
